12/14/22, added custom scrollbar, remove some info from about-me, change paddinging to modal

--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
           <a href="index.html" class="my-logo link">V.V</a>
           <ul class="nav-menu">
             <li>
-              <a href="#contact" class="link"
-                >CONTACT <i class="fa fa-address-card"></i
-              ></a>
+              <a href="#about-me">ABOUT</a>
             </li>
             <li>
-              <a href="#project" class="link"
-                >PROJECTS <i class="fa fa-diagram-project"></i
-              ></a>
+              <a href="#contact" class="link">CONTACT</a>
+            </li>
+            <li>
+              <a href="#project" class="link">PROJECTS</a>
             </li>
           </ul>
         </nav>
@@ -52,23 +51,18 @@
     </header>
     <main>
       <!--About Me-->
-      <section class="section-1 about-me">
+      <section class="section-1 about-me" id="about-me">
         <div class="wrapper">
           <div class="about-me-container">
             <div class="about-me-content">
               <h1>About Me</h1>
               <img src="/image/IMG_4012.JPG" alt="image of me" />
               <p>
-                Hi, my name is Visay Vang, I found code a year ago and like it
-                alot. I haven't stop learning and coding since. I look toward a
-                career where I can bring my creativity for web design. I am
-                ready to make this jump into the tech industry.
+                Hi, I'm Visay Vang, I like code alot. I haven't stop learning
+                and coding since the day of discovering it. I am ready to make
+                this jump into the tech industry.
               </p>
-              <p>
-                Outside from code I love to spend time with my family and
-                hangout with friends. I like to play sports, service in the
-                church and fish.
-              </p>
+
               <button class="read-btn" id="read-more-btn">Read more...</button>
             </div>
             <div class="skills-content">
@@ -134,13 +128,18 @@
               has and I wanted the power in my hand so I decided to embarked on
               this journey.
             </p>
+            <p>
+              Outside from code, I love to spend time with my wife and children
+              and hangout with friends. I like to watch football, basketball and
+              soccer as well as playing it. I love God and serve in the church.
+            </p>
           </div>
         </div>
       </div>
       <!--End of Modal-->
 
       <!--Landing Page, Section 4-->
-      <section class="section-4">
+      <section class="section-4" id="project">
         <div class="wrapper">
           <div class="landing-page-container">
             <h1>LANDING PAGE</h1>
@@ -206,7 +205,7 @@
               <h1>Lets <span class="orange-text">Work</span> Together</h1>
             </div>
             <div class="btn-div">
-              <a href="#contact">
+              <a href="#contact-form">
                 <button class="contact-btn">Hire Me</button>
               </a>
             </div>
@@ -279,7 +278,7 @@
       </section>
     </main>
     <!--Form Section-->
-    <section class="contact-form">
+    <section class="contact-form" id="contact-form">
       <div class="wrapper">
         <h1>GET IN TOUCH</h1>
         <div class="form-container">
