--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="background">
       <div class="wrapper">
-        <nav>
+        <nav class="navbar">
           <a href="index.html" class="my-logo link">V.V</a>
           <ul class="nav-menu">
             <li>
