--- a/index.html
+++ b/index.html
@@ -19,25 +19,36 @@
   <body>
     <header class="background">
       <div class="wrapper">
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
           <a href="index.html" class="my-logo link">V.V</a>
+          <div class="close-btn-div">
+            <button class="hamburger-close" id="hamburger-close">
+              <i class="fa-solid fa-x"></i>
+            </button>
+          </div>
           <ul class="nav-menu">
-            <li>
-              <a href="#about-me">ABOUT</a>
+            <li class="nav-item">
+              <a href="#about-me" class="nav-link">ABOUT</a>
             </li>
-            <li>
-              <a href="#contact" class="link">CONTACT</a>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">CONTACT</a>
             </li>
-            <li>
-              <a href="#project" class="link">PROJECTS</a>
+            <li class="nav-item">
+              <a href="#project" class="nav-link">PROJECTS</a>
             </li>
           </ul>
         </nav>
+        <!--Hamburger Menu-->
+        <div class="hamburger-div">
+          <button class="hamburger-btn" id="hamburger-btn">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+        </div>
         <div class="container">
           <div class="intro-content">
             <h1>Hello,<span class="orange-text"> I'm Visay</span></h1>
-            <p>I am a Html Email / Frontend Developer</p>
-            <p>I build responsive user interface</p>
+            <p>I am a Frontend Developer</p>
+            <p>I build responsive user interfaces</p>
             <p>Available for work</p>
             <a href="https://github.com/" target="_blank"
               ><i class="fa-brands fa-github"></i
@@ -54,48 +65,51 @@
       <section class="section-1 about-me" id="about-me">
         <div class="wrapper">
           <div class="about-me-container">
-            <div class="about-me-content">
+            <div class="about-container about-column">
               <h1>About Me</h1>
-              <img src="/image/IMG_4012.JPG" alt="image of me" />
-              <p>
-                Hi, I'm Visay Vang, I like code alot. I haven't stop learning
-                and coding since the day of discovering it. I am ready to make
-                this jump into the tech industry.
-              </p>
+              <div class="about-me-content">
+                <p>
+                  Hi, I'm Visay Vang, I like code alot. I haven't stop learning
+                  and coding since the day of discovering it. I am ready to make
+                  this jump into the tech industry.
+                </p>
 
-              <button class="read-btn" id="read-more-btn">Read more...</button>
+                <button class="read-btn" id="read-more-btn">
+                  Read more...
+                </button>
+                <img
+                  src="/image/streamlinehq-designer-desk-2-brooklyn-400.svg"
+                  alt="image of me"
+                />
+              </div>
             </div>
-            <div class="skills-content">
+
+            <div class="skills-content about-column">
               <h1>Skills</h1>
               <div class="skills-inner-content">
                 <div class="skills column-1">
-                  <img src="/image/html5.svg" alt="" />
+                  <i class="fa-brands fa-html5"></i>
                   <p>HTML</p>
                 </div>
                 <div class="skills column-2">
-                  <img src="/image/css3.svg" alt="" />
+                  <i class="fa-brands fa-css3-alt"></i>
                   <p>CSS</p>
                 </div>
                 <div class="skills column-3">
-                  <img src="/image/sass.svg" alt="" />
+                  <i class="fa-brands fa-sass"></i>
                   <p>Sass</p>
                 </div>
                 <div class="skills column-4">
-                  <img src="/image/js.svg" alt="" />
+                  <i class="fa-brands fa-js"></i>
                   <p>JavaScript</p>
                 </div>
                 <div class="skills column-5">
-                  <img src="/image/figma.svg" alt="" />
+                  <i class="fa-brands fa-figma"></i>
                   <p>Figma</p>
                 </div>
                 <div class="skills column-6">
-                  <img src="/image/git.svg" alt="" />
+                  <i class="fa-brands fa-git-alt"></i>
                   <p>Git</p>
-                </div>
-                <div class="skills column-7">
-                  <img src="/image/react.svg" alt="" />
-                  <p>React</p>
-                  <small>(Still learning)</small>
                 </div>
               </div>
             </div>
@@ -124,14 +138,13 @@
             <p>
               After doing my research and coming upon videos on youtube from
               self-taught developers it change my perspective. I coded my first
-              "Hello World", in JavaScript and I was hooked. I saw the power it
-              has and I wanted the power in my hand so I decided to embarked on
-              this journey.
+              "Hello World", in JavaScript and I was hooked. I knew this is a
+              career I would love to do.
             </p>
             <p>
               Outside from code, I love to spend time with my wife and children
               and hangout with friends. I like to watch football, basketball and
-              soccer as well as playing it. I love God and serve in the church.
+              soccer as well as playing it.
             </p>
           </div>
         </div>
