12/18/22, change about me layout, remove img, added new color

--- a/index.html
+++ b/index.html
@@ -64,52 +64,51 @@
       <!--About Me-->
       <section class="section-1 about-me" id="about-me">
         <div class="wrapper">
-          <div class="about-me-container">
-            <div class="about-container about-column">
-              <h1>About Me</h1>
-              <div class="about-me-content">
+          <div class="center-container">
+            <div class="about-me-container">
+              <div class="about-me-content about-column">
+                <h1>About Me</h1>
                 <p>
-                  Hi, I'm Visay Vang, I like code alot. I haven't stop learning
+                  My name is Visay Vang, I like code alot. I am a self-taught
+                  developer base out of Anderson, SC. I haven't stop learning
                   and coding since the day of discovering it. I am ready to make
                   this jump into the tech industry.
                 </p>
-
-                <button class="read-btn" id="read-more-btn">
+                <button id="read-more-btn" class="read-btn">
                   Read more...
                 </button>
-                <img
-                  src="/image/streamlinehq-designer-desk-2-brooklyn-400.svg"
-                  alt="image of me"
-                />
               </div>
-            </div>
-
-            <div class="skills-content about-column">
-              <h1>Skills</h1>
-              <div class="skills-inner-content">
-                <div class="skills column-1">
-                  <i class="fa-brands fa-html5"></i>
-                  <p>HTML</p>
-                </div>
-                <div class="skills column-2">
-                  <i class="fa-brands fa-css3-alt"></i>
-                  <p>CSS</p>
-                </div>
-                <div class="skills column-3">
-                  <i class="fa-brands fa-sass"></i>
-                  <p>Sass</p>
-                </div>
-                <div class="skills column-4">
-                  <i class="fa-brands fa-js"></i>
-                  <p>JavaScript</p>
-                </div>
-                <div class="skills column-5">
-                  <i class="fa-brands fa-figma"></i>
-                  <p>Figma</p>
-                </div>
-                <div class="skills column-6">
-                  <i class="fa-brands fa-git-alt"></i>
-                  <p>Git</p>
+              <!--Skills-->
+              <div class="skills about-column">
+                <div class="skill-container">
+                  <div class="skill-column">
+                    <i class="fa-brands fa-html5"></i>
+                    <p>HTML</p>
+                  </div>
+                  <div class="skill-column">
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <p>CSS</p>
+                  </div>
+                  <div class="skill-column">
+                    <i class="fa-brands fa-sass"></i>
+                    <p>Sass</p>
+                  </div>
+                  <div class="skill-column">
+                    <i class="fa-brands fa-bootstrap"></i>
+                    <p>Bootstrap</p>
+                  </div>
+                  <div class="skill-column">
+                    <i class="fa-brands fa-js"></i>
+                    <p>JavaScript</p>
+                  </div>
+                  <div class="skill-column">
+                    <i class="fa-brands fa-git-alt"></i>
+                    <p>Git</p>
+                  </div>
+                  <div class="skill-column">
+                    <i class="fa-brands fa-react"></i>
+                    <p>React</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -131,9 +130,7 @@
               My journey into code was an unexpected one. I came from a
               non-traditional background working as a CNC Machinist. I wanted to
               further my career by learning cnc machine codes and came across
-              software development. Software development looked intimidating and
-              I thought to myself that you would need a four year college degree
-              and be super smart to learn.
+              software development.
             </p>
             <p>
               After doing my research and coming upon videos on youtube from
