12/18/22, remove hover, added view btn and style

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="center-container">
             <div class="about-me-container">
               <div class="about-me-content about-column">
-                <h1>About Me</h1>
+                <h1>ABOUT ME</h1>
                 <p>
                   My name is Visay Vang, I like code alot. I am a self-taught
                   developer base out of Anderson, SC. I haven't stop learning
@@ -129,19 +129,20 @@
             <p>
               My journey into code was an unexpected one. I came from a
               non-traditional background working as a CNC Machinist. I wanted to
-              further my career by learning cnc machine codes and came across
-              software development.
+              further my career as a machinist by learning G and M codes, but
+              came across software development.
             </p>
             <p>
-              After doing my research and coming upon videos on youtube from
-              self-taught developers it change my perspective. I coded my first
-              "Hello World", in JavaScript and I was hooked. I knew this is a
-              career I would love to do.
+              I hesitated to pursued software development at first because of
+              intimidation, but after doing my research it change my mind and I
+              decided to dive into it. I coded my first "Hello World" in
+              JavaScript and I was hooked. I knew this is a career I would love
+              to do.
             </p>
             <p>
               Outside from code, I love to spend time with my wife and children
               and hangout with friends. I like to watch football, basketball and
-              soccer as well as playing it.
+              soccer.
             </p>
           </div>
         </div>
@@ -155,52 +156,79 @@
             <h1>LANDING PAGE</h1>
             <div class="landing-page-content">
               <div class="landing-page-column">
-                <a
-                  href="https://visayundergroundshirt.netlify.app"
-                  target="_blank"
-                >
-                  <div class="img-div">
-                    <img src="/image/t-shirt.png" alt="" />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">T-Shirt Printing</p>
-                    <small>Html, Sass, JavaScript</small>
-                    <p>
-                      Used grid and flexbox for responsiveness and layouts.
-                      Dropdown nav menu and mobile responsive menu.
-                    </p>
-                  </div>
-                </a>
+                <div class="img-div">
+                  <img src="/image/t-shirt.png" alt="" />
+                </div>
+                <div class="description">
+                  <p class="bold-text">T-Shirt Printing</p>
+                  <small>Html, Sass, JavaScript</small>
+                  <p>
+                    Used grid and flexbox for responsiveness and layouts.
+                    Dropdown nav menu and mobile responsive menu.
+                  </p>
+                  <a
+                    href="https://visayundergroundshirt.netlify.app"
+                    target="_blank"
+                    class="view-btn"
+                    >View</a
+                  >
+                  <a
+                    href="https://github.com/vsvang87/UndergroundShirts/tree/master"
+                    target="_blank"
+                    class="view-btn"
+                    >Github</a
+                  >
+                </div>
               </div>
               <div class="landing-page-column">
-                <a href="https://visayloopstudios.netlify.app" target="_blank">
-                  <div class="img-div">
-                    <img src="/image/loopstudios.jpg" alt="" />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">Loopstudios</p>
-                    <small>Html, CSS, JavaScript</small>
-                    <p>
-                      Responsive landing page using grid and flexbox for
-                      layouts. Also has responsive mobile menu
-                    </p>
-                  </div>
-                </a>
+                <div class="img-div">
+                  <img src="/image/loopstudios.jpg" alt="" />
+                </div>
+                <div class="description">
+                  <p class="bold-text">Loopstudios</p>
+                  <small>Html, CSS, JavaScript</small>
+                  <p>
+                    Responsive landing page using grid and flexbox for layouts.
+                    Also has responsive mobile menu
+                  </p>
+                  <a
+                    href="https://visayloopstudios.netlify.app"
+                    target="_blank"
+                    class="view-btn"
+                    >View</a
+                  >
+                  <a
+                    href="https://github.com/vsvang87/Loopstudios/tree/master"
+                    target="_blank"
+                    class="view-btn"
+                    >Github</a
+                  >
+                </div>
               </div>
               <div class="landing-page-column">
-                <a href="https://visayvangadidas.netlify.app" target="_blank">
-                  <div class="img-div">
-                    <img src="/image/adidas.png" alt="" />
-                  </div>
-                  <div class="description">
-                    <p class="bold-text">Adidas</p>
-                    <small>Html, CSS, JavaScript</small>
-                    <p>
-                      Responsive landing page with flexbox and grid for layouts
-                      and also a responsive mobile menu.
-                    </p>
-                  </div>
-                </a>
+                <div class="img-div">
+                  <img src="/image/adidas.png" alt="" />
+                </div>
+                <div class="description">
+                  <p class="bold-text">Adidas Clone</p>
+                  <small>Html, CSS, JavaScript</small>
+                  <p>
+                    An adidas site that I clone. It doesn't have the same
+                    function but has the same layouts.
+                  </p>
+                  <a
+                    href="https://visayvangadidas.netlify.app"
+                    target="_blank"
+                    class="view-btn"
+                    >View</a
+                  >
+                  <a
+                    href="https://github.com/vsvang87/AdidasCloneSite/tree/master"
+                    target="_blank"
+                    class="view-btn"
+                    >Github</a
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -227,61 +255,86 @@
         <div class="wrapper">
           <h1>MINI PROJECTS</h1>
           <div class="mini-project-content">
-            <div class="mini-inner-content min-col">
-              <a
-                href="https://visaydiscountcalculator.netlify.app"
-                target="_blank"
-              >
-                <div class="img-div">
-                  <img src="/image/discountcalc.jpg" alt="" />
-                </div>
-                <div class="description">
-                  <p class="bold-text">Discount Calculator</p>
-                  <small>Html, CSS, JavaScript</small>
-                  <p>
-                    Enter the full price and select the discount percentage to
-                    calculate your results. No more guessing what the price
-                    could have been with this calculator in your hand. An error
-                    message will appear if letters are enter in the input field.
-                  </p>
-                </div>
-              </a>
+            <div class="mini-inner-content">
+              <div class="img-div">
+                <img src="/image/discountcalc.jpg" alt="" />
+              </div>
+              <div class="description">
+                <p class="bold-text">Discount Calculator</p>
+                <small>Html, CSS, JavaScript</small>
+                <p>
+                  A discount calculator that will calculate the percentage off
+                  for you. The calculator is formatted to 2 place decimal giving
+                  you the correct results. I added regex to the input field to
+                  check for number and decimal only.
+                </p>
+                <a
+                  href="https://visaydiscountcalculator.netlify.app"
+                  target="_blank"
+                  class="view-btn"
+                  >View</a
+                >
+                <a
+                  href="https://github.com/vsvang87/DiscountCalculator/tree/master"
+                  target="_blank"
+                  class="view-btn"
+                  >Github</a
+                >
+              </div>
             </div>
-            <div class="mini-inner-content min-col">
-              <a href="https://visayformvalidation.netlify.app" target="_blank">
-                <div class="img-div">
-                  <img src="/image/formvalidation.png" alt="" />
-                </div>
-                <div class="description">
-                  <p class="bold-text">Form Validation</p>
-                  <small>Html, Sass, JavaScript</small>
-                  <p>
-                    If input field are empty it will throw an error and red
-                    border. Once input field has the correct value the error
-                    message and red border will disappear.
-                  </p>
-                </div>
-              </a>
+            <div class="mini-inner-content">
+              <div class="img-div">
+                <img src="/image/formvalidation.png" alt="" />
+              </div>
+              <div class="description">
+                <p class="bold-text">Form Validation</p>
+                <small>Html, Sass, JavaScript</small>
+                <p>
+                  A form validation making sure that all input fields have the
+                  correct value in there. If a field is empty or have incorrect
+                  value it will throw an error.
+                </p>
+                <a
+                  href="https://visayformvalidation.netlify.app"
+                  target="_blank"
+                  class="view-btn"
+                  >View</a
+                >
+                <a
+                  href="https://github.com/vsvang87/FormValidation/tree/master"
+                  target="_blank"
+                  class="view-btn"
+                  >Github</a
+                >
+              </div>
             </div>
-            <div class="mini-inner-content min-col">
-              <a
-                href="https://visaypasswordgenerator.netlify.app"
-                target="_blank"
-              >
-                <div class="img-div">
-                  <img src="/image/password.png" alt="" />
-                </div>
-                <div class="description">
-                  <p class="bold-text">Password Generator</p>
-                  <small>Html, CSS, JavaScript</small>
-                  <p>
-                    You can set character length and decide whether to include
-                    lowercase, uppercase, special characters or numbers in your
-                    password. Once you decide on a password you could click on
-                    it and it will automatically copy it for you.
-                  </p>
-                </div>
-              </a>
+            <div class="mini-inner-content">
+              <div class="img-div">
+                <img src="/image/password.png" alt="" />
+              </div>
+              <div class="description">
+                <p class="bold-text">Password Generator</p>
+                <small>Html, CSS, JavaScript</small>
+                <p>
+                  A password generator that generate a random password for you.
+                  I included options for character length, lowercase, uppercase,
+                  symbol, and number in your password. I also added a click to
+                  copy function which you could just click on the password and
+                  it will automatically copy it for you.
+                </p>
+                <a
+                  href="https://visaypasswordgenerator.netlify.app"
+                  target="_blank"
+                  class="view-btn"
+                  >View</a
+                >
+                <a
+                  href="https://github.com/vsvang87/Password-Generator/tree/master"
+                  target="_blank"
+                  class="view-btn"
+                  >Github</a
+                >
+              </div>
             </div>
           </div>
         </div>
