12/18/22, added scroll animation

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     </header>
     <main>
       <!--About Me-->
-      <section class="section-1 about-me" id="about-me">
+      <section class="section-1 section" id="about-me">
         <div class="wrapper">
           <div class="center-container">
             <div class="about-me-container">
-              <div class="about-me-content about-column">
+              <div class="about-me-content about-column reveal">
                 <h1>ABOUT ME</h1>
                 <p>
                   My name is Visay Vang, I like code alot. I am a self-taught
@@ -80,7 +80,7 @@
               </div>
               <!--Skills-->
               <div class="skills about-column">
-                <div class="skill-container">
+                <div class="skill-container reveal">
                   <div class="skill-column">
                     <i class="fa-brands fa-html5"></i>
                     <p>HTML</p>
@@ -150,12 +150,12 @@
       <!--End of Modal-->
 
       <!--Landing Page, Section 4-->
-      <section class="section-4" id="project">
+      <section class="section section-4" id="project">
         <div class="wrapper">
           <div class="landing-page-container">
             <h1>LANDING PAGE</h1>
             <div class="landing-page-content">
-              <div class="landing-page-column">
+              <div class="landing-page-column reveal">
                 <div class="img-div">
                   <img src="/image/t-shirt.png" alt="" />
                 </div>
@@ -180,7 +180,7 @@
                   >
                 </div>
               </div>
-              <div class="landing-page-column">
+              <div class="landing-page-column reveal">
                 <div class="img-div">
                   <img src="/image/loopstudios.jpg" alt="" />
                 </div>
@@ -205,7 +205,7 @@
                   >
                 </div>
               </div>
-              <div class="landing-page-column">
+              <div class="landing-page-column reveal">
                 <div class="img-div">
                   <img src="/image/adidas.png" alt="" />
                 </div>
@@ -251,11 +251,11 @@
         </div>
       </section>
       <!--End of Banner Section-->
-      <section class="section-6">
+      <section class="section-6 section">
         <div class="wrapper">
           <h1>MINI PROJECTS</h1>
           <div class="mini-project-content">
-            <div class="mini-inner-content">
+            <div class="mini-inner-content reveal">
               <div class="img-div">
                 <img src="/image/discountcalc.jpg" alt="" />
               </div>
@@ -282,7 +282,7 @@
                 >
               </div>
             </div>
-            <div class="mini-inner-content">
+            <div class="mini-inner-content reveal">
               <div class="img-div">
                 <img src="/image/formvalidation.png" alt="" />
               </div>
@@ -308,7 +308,7 @@
                 >
               </div>
             </div>
-            <div class="mini-inner-content">
+            <div class="mini-inner-content reveal">
               <div class="img-div">
                 <img src="/image/password.png" alt="" />
               </div>
@@ -341,10 +341,10 @@
       </section>
     </main>
     <!--Form Section-->
-    <section class="contact-form" id="contact-form">
+    <section class="contact-form section" id="contact-form">
       <div class="wrapper">
         <h1>GET IN TOUCH</h1>
-        <div class="form-container">
+        <div class="form-container reveal">
           <form
             id="my-form"
             action="https://formspree.io/f/moqbbvna"
