12/27/22, change html, change intro to center

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
               <div class="about-me-content about-column reveal">
                 <h1>ABOUT ME</h1>
                 <p>
-                  My name is Visay Vang, I like code alot. I am a self-taught
-                  developer base out of Anderson, SC. I haven't stop learning
-                  and coding since the day of discovering it. I am ready to make
-                  this jump into the tech industry.
+                  My name is Visay Vang. I am a self-taught developer base out
+                  of Anderson, SC. I haven't stop learning and coding since the
+                  day of discovering it. I am ready to make this jump into the
+                  tech industry.
                 </p>
                 <button id="read-more-btn" class="read-btn">
                   Read more...
@@ -163,8 +163,10 @@
                   <p class="bold-text">T-Shirt Printing</p>
                   <small>Html, Sass, JavaScript</small>
                   <p>
-                    Used grid and flexbox for responsiveness and layouts.
-                    Dropdown nav menu and mobile responsive menu.
+                    This is not a real site. I took the design from another site
+                    and made it my own. I used grid and flexbox for responsive
+                    design and layouts. I added dropdown and mobile menu as
+                    well.
                   </p>
                   <a
                     href="https://visayundergroundshirt.netlify.app"
@@ -188,8 +190,9 @@
                   <p class="bold-text">Loopstudios</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    Responsive landing page using grid and flexbox for layouts.
-                    Also has responsive mobile menu
+                    This is not a real site. I built it from frontendmentor. It
+                    was a challenge that I completed. It is a responsive landing
+                    page with a mobile menu.
                   </p>
                   <a
                     href="https://visayloopstudios.netlify.app"
