12/27/22, change landing page project

--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
                   <p class="bold-text">Loopstudios</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    This is not a real site. I built it from frontendmentor. It
-                    was a challenge that I completed. It is a responsive landing
-                    page with a mobile menu.
+                    This is not a real site. I built it from frontendmentor.com.
+                    It was a challenge that I completed. It is a responsive
+                    landing page with a mobile menu.
                   </p>
                   <a
                     href="https://visayloopstudios.netlify.app"
@@ -210,23 +210,24 @@
               </div>
               <div class="landing-page-column reveal">
                 <div class="img-div">
-                  <img src="/image/adidas.png" alt="" />
+                  <img src="/image/sunnyside.png" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">Adidas Clone</p>
+                  <p class="bold-text">Sunnyside</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    An adidas site that I clone. It doesn't have the same
-                    function but has the same layouts.
+                    This is not a real site. It is a challenge from
+                    frontendmentor.com. I use HTML for structuring, CSS for
+                    layout and responsiveness, and JavaScript for mobile menu.
                   </p>
                   <a
-                    href="https://visayvangadidas.netlify.app"
+                    href="https://digitalvisual.netlify.app"
                     target="_blank"
                     class="view-btn"
                     >View</a
                   >
                   <a
-                    href="https://github.com/vsvang87/AdidasCloneSite/tree/master"
+                    href="https://github.com/vsvang87/digitalVisual_landingPage/tree/master"
                     target="_blank"
                     class="view-btn"
                     >Github</a
