--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <a href="https://www.linkedin.com/in/vsvang/" target="_blank"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
+            <div class="cv-btn">
+              <button class="resume-btn">Resume</button>
+            </div>
           </div>
         </div>
       </div>
