12/31/22, added position to view btn, added fixed height

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href="https://www.linkedin.com/in/vsvang/" target="_blank"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
-            <div class="cv-btn">
+            <div class="resume-button-div">
               <button class="resume-btn">Resume</button>
             </div>
           </div>
@@ -171,18 +171,20 @@
                     design and layouts. I added dropdown and mobile menu as
                     well.
                   </p>
-                  <a
-                    href="https://visayundergroundshirt.netlify.app"
-                    target="_blank"
-                    class="view-btn"
-                    >View</a
-                  >
-                  <a
-                    href="https://github.com/vsvang87/UndergroundShirts/tree/master"
-                    target="_blank"
-                    class="view-btn"
-                    >Github</a
-                  >
+                  <div class="view-github-button">
+                    <a
+                      href="https://visayundergroundshirt.netlify.app"
+                      target="_blank"
+                      class="view-btn"
+                      >View</a
+                    >
+                    <a
+                      href="https://github.com/vsvang87/UndergroundShirts/tree/master"
+                      target="_blank"
+                      class="view-btn"
+                      >Github</a
+                    >
+                  </div>
                 </div>
               </div>
               <div class="landing-page-column reveal">
@@ -197,18 +199,20 @@
                     It was a challenge that I completed. It is a responsive
                     landing page with a mobile menu.
                   </p>
-                  <a
-                    href="https://visayloopstudios.netlify.app"
-                    target="_blank"
-                    class="view-btn"
-                    >View</a
-                  >
-                  <a
-                    href="https://github.com/vsvang87/Loopstudios/tree/master"
-                    target="_blank"
-                    class="view-btn"
-                    >Github</a
-                  >
+                  <div class="view-github-button">
+                    <a
+                      href="https://visayloopstudios.netlify.app"
+                      target="_blank"
+                      class="view-btn"
+                      >View</a
+                    >
+                    <a
+                      href="https://github.com/vsvang87/Loopstudios/tree/master"
+                      target="_blank"
+                      class="view-btn"
+                      >Github</a
+                    >
+                  </div>
                 </div>
               </div>
               <div class="landing-page-column reveal">
@@ -223,18 +227,20 @@
                     frontendmentor.com. I use HTML for structuring, CSS for
                     layout and responsiveness, and JavaScript for mobile menu.
                   </p>
-                  <a
-                    href="https://digitalvisual.netlify.app"
-                    target="_blank"
-                    class="view-btn"
-                    >View</a
-                  >
-                  <a
-                    href="https://github.com/vsvang87/digitalVisual_landingPage/tree/master"
-                    target="_blank"
-                    class="view-btn"
-                    >Github</a
-                  >
+                  <div class="view-github-button">
+                    <a
+                      href="https://digitalvisual.netlify.app"
+                      target="_blank"
+                      class="view-btn"
+                      >View</a
+                    >
+                    <a
+                      href="https://github.com/vsvang87/digitalVisual_landingPage/tree/master"
+                      target="_blank"
+                      class="view-btn"
+                      >Github</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -275,18 +281,20 @@
                   you the correct results. I added regex to the input field to
                   check for number and decimal only.
                 </p>
-                <a
-                  href="https://visaydiscountcalculator.netlify.app"
-                  target="_blank"
-                  class="view-btn"
-                  >View</a
-                >
-                <a
-                  href="https://github.com/vsvang87/DiscountCalculator/tree/master"
-                  target="_blank"
-                  class="view-btn"
-                  >Github</a
-                >
+                <div class="view-github-button">
+                  <a
+                    href="https://visaydiscountcalculator.netlify.app"
+                    target="_blank"
+                    class="view-btn"
+                    >View</a
+                  >
+                  <a
+                    href="https://github.com/vsvang87/DiscountCalculator/tree/master"
+                    target="_blank"
+                    class="view-btn"
+                    >Github</a
+                  >
+                </div>
               </div>
             </div>
             <div class="mini-inner-content reveal">
@@ -301,18 +309,20 @@
                   correct value in there. If a field is empty or have incorrect
                   value it will throw an error.
                 </p>
-                <a
-                  href="https://visayformvalidation.netlify.app"
-                  target="_blank"
-                  class="view-btn"
-                  >View</a
-                >
-                <a
-                  href="https://github.com/vsvang87/FormValidation/tree/master"
-                  target="_blank"
-                  class="view-btn"
-                  >Github</a
-                >
+                <div class="view-github-button">
+                  <a
+                    href="https://visayformvalidation.netlify.app"
+                    target="_blank"
+                    class="view-btn"
+                    >View</a
+                  >
+                  <a
+                    href="https://github.com/vsvang87/FormValidation/tree/master"
+                    target="_blank"
+                    class="view-btn"
+                    >Github</a
+                  >
+                </div>
               </div>
             </div>
             <div class="mini-inner-content reveal">
@@ -329,18 +339,20 @@
                   copy function which you could just click on the password and
                   it will automatically copy it for you.
                 </p>
-                <a
-                  href="https://visaypasswordgenerator.netlify.app"
-                  target="_blank"
-                  class="view-btn"
-                  >View</a
-                >
-                <a
-                  href="https://github.com/vsvang87/Password-Generator/tree/master"
-                  target="_blank"
-                  class="view-btn"
-                  >Github</a
-                >
+                <div class="view-github-button">
+                  <a
+                    href="https://visaypasswordgenerator.netlify.app"
+                    target="_blank"
+                    class="view-btn"
+                    >View</a
+                  >
+                  <a
+                    href="https://github.com/vsvang87/Password-Generator/tree/master"
+                    target="_blank"
+                    class="view-btn"
+                    >Github</a
+                  >
+                </div>
               </div>
             </div>
           </div>
