01/01/23, change description to mini projects, added bottom line to sect 1

--- a/index.html
+++ b/index.html
@@ -276,10 +276,12 @@
                 <p class="bold-text">Discount Calculator</p>
                 <small>Html, CSS, JavaScript</small>
                 <p>
-                  A discount calculator that will calculate the percentage off
-                  for you. The calculator is formatted to 2 place decimal giving
-                  you the correct results. I added regex to the input field to
-                  check for number and decimal only.
+                  I implemented regex to check for numbers and special
+                  character. I used a match method with an if/else statement to
+                  make sure the input value match. Also formatted the decimal to
+                  two places to get an accurate result. I added an error message
+                  if other than number or a certain special character is
+                  entered.
                 </p>
                 <div class="view-github-button">
                   <a
@@ -333,11 +335,10 @@
                 <p class="bold-text">Password Generator</p>
                 <small>Html, CSS, JavaScript</small>
                 <p>
-                  A password generator that generate a random password for you.
-                  I included options for character length, lowercase, uppercase,
-                  symbol, and number in your password. I also added a click to
-                  copy function which you could just click on the password and
-                  it will automatically copy it for you.
+                  A random password generator. I used arrays to store data, then
+                  used a for loop to iterate and generate random character from
+                  each. I took the functions and store it in an object. Used
+                  filter and object.value to search for checked boxes.
                 </p>
                 <div class="view-github-button">
                   <a
