--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
             <a href="https://www.linkedin.com/in/vsvang/" target="_blank"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
-            <div class="resume-button-div">
-              <button class="resume-btn">Resume</button>
-            </div>
           </div>
         </div>
       </div>
@@ -156,14 +153,14 @@
       <section class="section section-4" id="project">
         <div class="wrapper">
           <div class="landing-page-container">
-            <h1>LANDING PAGE</h1>
+            <h1>PORJECTS</h1>
             <div class="landing-page-content">
               <div class="landing-page-column reveal">
                 <div class="img-div">
                   <img src="/image/t-shirt.png" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">T-Shirt Printing</p>
+                  <p class="bold-text">T-Shirt Printing Landing Page</p>
                   <small>Html, Sass, JavaScript</small>
                   <p>
                     This is not a real site. I took the design from another site
@@ -192,7 +189,7 @@
                   <img src="/image/loopstudios.jpg" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">Loopstudios</p>
+                  <p class="bold-text">Loopstudios Landing Page</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
                     This is not a real site. I built it from frontendmentor.com.
@@ -217,25 +214,25 @@
               </div>
               <div class="landing-page-column reveal">
                 <div class="img-div">
-                  <img src="/image/sunnyside.png" alt="" />
+                  <img src="/image/countryapp.jpg" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">Sunnyside</p>
+                  <p class="bold-text">Country App</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    This is not a real site. It is a challenge from
-                    frontendmentor.com. I use HTML for structuring, CSS for
-                    layout and responsiveness, and JavaScript for mobile menu.
+                    A app that generate a country of your choice. I implemented
+                    api to fetch data. I used template string to render data
+                    into HTML.
                   </p>
                   <div class="view-github-button">
                     <a
-                      href="https://digitalvisual.netlify.app"
+                      href="https://visaycountryapp.netlify.app"
                       target="_blank"
                       class="view-btn"
                       >View</a
                     >
                     <a
-                      href="https://github.com/vsvang87/digitalVisual_landingPage/tree/master"
+                      href="https://github.com/vsvang87/CountryApp/tree/master"
                       target="_blank"
                       class="view-btn"
                       >Github</a
@@ -266,7 +263,7 @@
       <!--End of Banner Section-->
       <section class="section-6 section">
         <div class="wrapper">
-          <h1>MINI PROJECTS</h1>
+          <h1>MORE PROJECTS</h1>
           <div class="mini-project-content">
             <div class="mini-inner-content reveal">
               <div class="img-div">
